--- a/style.css
+++ b/style.css
@@ -1,13 +1,31 @@
 * {
     margin: 0;
-    padding: 0 0 0.5rem;
+    padding: 0 0.02rem 0.5rem;
     box-sizing: border-box;
+    color: rgb(214, 197, 158);
+}
+
+a {
+    display: inline-block;
 }
 
 html {
-    color: rgb(226, 215, 182);
     font-family: sans-serif;
     font-weight: bolder;
     font-size: 3rem;
     background-color: rgb(0, 72, 44);
+}
+
+.success {
+    padding: 1rem;
+    color: rgb(235, 169, 0);
+    border: 1px solid rgb(235, 169, 0);
+    display: inline-block;
+}
+
+.error {
+    padding: 1rem;
+    color: rgb(185, 42, 53);
+    border: 1px solid rgb(185, 42, 53);
+    display: inline-block;
 }
